Console: fixup element alignment on /profiles (dark)

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -714,7 +714,7 @@ h3[id="udpcon"] {width: auto}
 #profilelist .viewedit {padding: 1px}
 #profilelist .version {line-height: 1.4}
 #profilelist .nospeed {text-align: center}
-#profilelist .lowlatency, #profilelist .highlatency {width: 12px; min-width: 0; text-align: center; color: #373}
+#profilelist .lowlatency, #profilelist .highlatency {width: 12px; min-width: 0; display: inline-block; text-align: center; color: #373}
 #profilelist .highlatency {color: #900}
 #floodfills td:nth-child(2) {padding-left: 3px; padding-right: 3px; white-space: nowrap}
 #floodfills td:nth-last-child(2) {text-align: center}
@@ -729,7 +729,7 @@ h3[id="udpcon"] {width: auto}
 #floodfills .percentBarText {color: #fff; text-shadow: var(--textshadow); display: none}
 #floodfills td:empty, #tunnels .cells:empty {text-align: center; vertical-align: middle}
 #floodfills td:empty::before, #ntcpconnections td:not(:last-child):empty::before, #udpconnections td:not(:last-child):empty::before, #profilelist td:empty::before, #tunnels .cells:empty::after {width: 100%; display: inline-block; text-align: center; content: "\2013"; opacity: .8}
-#floodfills td:nth-child(3) span, #profilelist td:nth-last-child(3) span, #profilelist td:nth-last-child(4) span, #profilelist td:nth-last-child(5) span, #profilelist td:nth-last-child(6) span, #profilelist td:nth-last-child(2) span {min-width: 20px; display: inline-block; vertical-align: middle; text-align: right}
+#floodfills td:nth-child(3) span, #profilelist td:nth-last-child(3) span, #profilelist td:nth-last-child(5) span, #profilelist td:nth-last-child(6) span, #profilelist td:nth-last-child(7) span, #profilelist td:nth-last-child(2) span {min-width: 20px; display: inline-block; vertical-align: middle; text-align: right}
 #peerprofiles.widescroll {margin-top: -10px; padding-top: 112px; position: relative}
 #peer_thresholds {width: 100%; position: absolute; top: 0}
 #view_profile h3 {margin-bottom: 13px; position: relative; vertical-align: middle; border-width: 1px; border-radius: 0}
